force-app/main/default/objects/Reservation_Line_Item__c/Reservation_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Reservation Line Item stores the bed level record related to a reservation. Patient is assigned on a bed using this record.</description>
    <label>Reservation Line Item</label>
    <nameField>
        <displayFormat>RLI-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservation Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>