force-app/main/default/objects/Reservation_Line_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used to allocate patient on a bed</description>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reservation Line Items</relationshipLabel>
    <relationshipName>Reservation_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>