force-app/main/default/objects/Reservation_Line_Item__c/fields/Bed__c.field-meta.xml
<CustomField>
    <fullName>Bed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the bed for line item.</description>
    <label>Bed</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Reservation Line Items (Bed)</relationshipLabel>
    <relationshipName>Reservation_Line_Items3</relationshipName>
    <type>Lookup</type>
</CustomField>