force-app/main/default/objects/Reservation_Line_Item__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store building of Room/Suite.</description>
    <label>Building</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Reservation Line Items</relationshipLabel>
    <relationshipName>Reservation_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>