force-app/main/default/objects/Reservation_Line_Item__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>This field is used to store the discount amount.</description>
    <label>Discount value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>