force-app/main/default/objects/Reservation_Line_Item__c/fields/Discount_type__c.field-meta.xml
<CustomField>
    <fullName>Discount_type__c</fullName>
    <description>This field is used to store the type of discount.</description>
    <label>Discount type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>flat</fullName>
                <label>$</label>
            </value>
            <value>
                <fullName>percent</fullName>
                <label>%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>