force-app/main/default/objects/Reservation_Line_Item__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>This field is used to store end time of a line item.</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>