force-app/main/default/objects/Reservation_Line_Item__c/fields/isBillable__c.field-meta.xml
<CustomField>
    <fullName>isBillable__c</fullName>
    <description>Used to tell if the line item is the top level billable entity.</description>
    <label>isBillable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>