force-app/main/default/objects/Reservation_Line_Item__c/fields/Net_price__c.field-meta.xml
<CustomField>
    <fullName>Net_price__c</fullName>
    <description>Used to store Net price selected based on number of days for Selected location</description>
    <label>Net price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>