force-app/main/default/objects/Reservation_Line_Item__c/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reservation lookup to interlink the line items with reservation</description>
    <label>Reservation</label>
    <referenceTo>Reservation__c</referenceTo>
    <relationshipLabel>Reservation Line Items</relationshipLabel>
    <relationshipName>Reservation_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>