force-app/main/default/objects/Reservation_Line_Item__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the Room for line item</description>
    <label>Room</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Reservation Line Items (Room)</relationshipLabel>
    <relationshipName>Reservation_Line_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>