force-app/main/default/objects/Reservation_Line_Item__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>stores the start time of line item</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>