force-app/main/default/objects/Reservation_Line_Item__c/fields/Suite__c.field-meta.xml
<CustomField>
    <fullName>Suite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to store the suite for line item.</description>
    <label>Suite</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Reservation Line Items (Suite)</relationshipLabel>
    <relationshipName>Reservation_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>