force-app/main/default/objects/Reservation_Line_Item__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Latest active care episode will be added in this lookup.</description>
    <label>Care Episode</label>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>Reservation Line Items</relationshipLabel>
    <relationshipName>Reservation_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>